Fix for svg alignment in button.

--- a/wwwroot/css/components.css
+++ b/wwwroot/css/components.css
@@ -2535,9 +2535,6 @@ h6,
   line-height: 2.2rem;
   text-align: center;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
