--- a/wwwroot/scss/button.scss
+++ b/wwwroot/scss/button.scss
@@ -12,7 +12,6 @@
     line-height: $line-height-22;
     text-align: $text-align-center;
     position: $position-relative;
-    display: flex;
     align-items: center;
 
     .giz-button-icon-left {
